Section About terminada na versão light

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ivan Viegas</title>
+    <title>Kuma</title>
 
         <!-- Arquivos CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
@@ -22,7 +22,7 @@
         <!-- ===== Aside Start ===== -->
         <div class="aside">
             <div class="logo">
-                <a href="#"><span>V</span>iegas</a>
+                <a href="#"><span>A</span>kuma</a>
             </div>
             <div class="nav-tonggler">
                 <span></span>
@@ -44,7 +44,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="home-info padd-15">
-                            <h3 class="hello">Hello, my name is <span class="name">Ivan B. Viegas</span></h3>
+                            <h3 class="hello">Hello, my name is <span class="name">Projeto 1</span></h3>
                             <h3 class="myprofession">I' m a <span class="typing">Marketing Analist</span></h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus corporis quisquam temporibus provident fugiat. Perspiciatis deserunt nisi quod explicabo rem officia asperiores accusamus, veniam et iste facilis! Libero, culpa voluptas.
                             Pariatur repellendus eaque facilis, facere dignissimos distinctio enim. Officiis mollitia obcaecati aliquid ut, animi architecto odit, natus dicta sunt quibusdam beatae amet pariatur ad ducimus exercitationem ea, sequi error. Debitis?</p>
@@ -57,6 +57,178 @@
                 </div>
             </section>
             <!-- ===== Home Section End ===== -->
+
+            <!-- ===== About Section Start ===== -->
+            <section class="about section">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>About Me</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="about-content padd-15">
+                            <div class="row">
+                                <div class="about-text padd-15">
+                                    <h3>I'm a PROJETO 1 and <span>Marketing Analist</span></h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium laboriosam tenetur animi ratione architecto temporibus perspiciatis eum reiciendis! Explicabo tenetur cupiditate exercitationem hic provident, veniam velit consequatur iusto commodi. Totam.
+                                    Impedit quaerat repudiandae rem voluptate dolorem mollitia dignissimos quam ad autem ipsam ex consectetur blanditiis enim quisquam earum ut inventore deleniti voluptatum, odit asperiores iusto. Totam repudiandae consequatur repellat maiores.
+                                    Fugit doloribus, pariatur tempora explicabo fuga blanditiis doloremque ea. Dolorem quisquam molestias eius sapiente beatae tempora assumenda ipsum nesciunt omnis commodi eum, sint asperiores voluptate quaerat iure iusto voluptas quis!</p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="personal-info padd-15">
+                                    <div class="row">
+                                        <div class="info-item padd-15">
+                                            <p>Birthday : <span>20 jul 1355</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Age : <span>22</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Website : <span>www.jhg.com.br</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Email : <span>lalala@gmail.com</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Degree : <span>CS</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Phone : <span>+55 51 9 9999 9999</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>City : <span>Kuma Land</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Freelance : <span>Disponivel</span></p>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="buttons padd-15">
+                                            <a href="#" class="btn">Download CV</a>
+                                            <a href="#contact" class="btn hire-me">Hire Me</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="skills padd-15">
+                                    <div class="row">
+                                        <div class="skills-item padd-15">
+                                            <h5>CSS</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 76%;"></div>
+                                                <div class="skills-porcent">76%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skills-item padd-15">
+                                            <h5>PHP</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 66%;"></div>
+                                                <div class="skills-porcent">66%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skills-item padd-15">
+                                            <h5>JS</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 56%;"></div>
+                                                <div class="skills-porcent">56%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skills-item padd-15">
+                                            <h5>HTML</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 96%;"></div>
+                                                <div class="skills-porcent">96%</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="education padd-15">
+                                    <h3 class="title">Educacion</h3>
+                                    <div class="row">
+                                        <div class="timeline-box padd-15">
+                                            <div class="timeline shadow-dark">
+                                                <!-- ===== Timeline Item ===== -->
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar">2020 - 2021</i>
+                                                    </h3>
+                                                    <h4 class="timeline-title">Tecnoca de computador</h4>
+                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos itaque animi dolores placeat, minus nihil exercitationem fuga ut. Sed, officiis? Officia assumenda quasi sit quo, libero excepturi similique obcaecati saepe.
+                                                    Voluptatibus, ratione, quisquam quasi odio ipsam est quis earum fuga quidem nulla quas dignissimos! Recusandae perspiciatis amet nobis neque pariatur. Inventore iste soluta, facere alias omnis vel numquam itaque dicta.</p>
+                                                </div>
+                                                <!-- ===== Timeline Item ===== -->
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar">2020 - 2021</i>
+                                                    </h3>
+                                                    <h4 class="timeline-title">Tecnoca de computador</h4>
+                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos itaque animi dolores placeat, minus nihil exercitationem fuga ut. Sed, officiis? Officia assumenda quasi sit quo, libero excepturi similique obcaecati saepe.
+                                                    Voluptatibus, ratione, quisquam quasi odio ipsam est quis earum fuga quidem nulla quas dignissimos! Recusandae perspiciatis amet nobis neque pariatur. Inventore iste soluta, facere alias omnis vel numquam itaque dicta.</p>
+                                                </div>
+                                                <!-- ===== Timeline Item ===== -->
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar">2020 - 2021</i>
+                                                    </h3>
+                                                    <h4 class="timeline-title">Tecnoca de computador</h4>
+                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos itaque animi dolores placeat, minus nihil exercitationem fuga ut. Sed, officiis? Officia assumenda quasi sit quo, libero excepturi similique obcaecati saepe.
+                                                    Voluptatibus, ratione, quisquam quasi odio ipsam est quis earum fuga quidem nulla quas dignissimos! Recusandae perspiciatis amet nobis neque pariatur. Inventore iste soluta, facere alias omnis vel numquam itaque dicta.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="experience padd-15">
+                                    <h3 class="title">Experience</h3>
+                                    <div class="row">
+                                        <div class="timeline-box padd-15">
+                                            <div class="timeline shadow-dark">
+                                                <!-- ===== Timeline Item ===== -->
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar">2020 - 2021</i>
+                                                    </h3>
+                                                    <h4 class="timeline-title">Tecnoca de computador</h4>
+                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos itaque animi dolores placeat, minus nihil exercitationem fuga ut. Sed, officiis? Officia assumenda quasi sit quo, libero excepturi similique obcaecati saepe.
+                                                    Voluptatibus, ratione, quisquam quasi odio ipsam est quis earum fuga quidem nulla quas dignissimos! Recusandae perspiciatis amet nobis neque pariatur. Inventore iste soluta, facere alias omnis vel numquam itaque dicta.</p>
+                                                </div>
+                                                <!-- ===== Timeline Item ===== -->
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar">2020 - 2021</i>
+                                                    </h3>
+                                                    <h4 class="timeline-title">Tecnoca de computador</h4>
+                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos itaque animi dolores placeat, minus nihil exercitationem fuga ut. Sed, officiis? Officia assumenda quasi sit quo, libero excepturi similique obcaecati saepe.
+                                                    Voluptatibus, ratione, quisquam quasi odio ipsam est quis earum fuga quidem nulla quas dignissimos! Recusandae perspiciatis amet nobis neque pariatur. Inventore iste soluta, facere alias omnis vel numquam itaque dicta.</p>
+                                                </div>
+                                                <!-- ===== Timeline Item ===== -->
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar">2020 - 2021</i>
+                                                    </h3>
+                                                    <h4 class="timeline-title">Tecnoca de computador</h4>
+                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos itaque animi dolores placeat, minus nihil exercitationem fuga ut. Sed, officiis? Officia assumenda quasi sit quo, libero excepturi similique obcaecati saepe.
+                                                    Voluptatibus, ratione, quisquam quasi odio ipsam est quis earum fuga quidem nulla quas dignissimos! Recusandae perspiciatis amet nobis neque pariatur. Inventore iste soluta, facere alias omnis vel numquam itaque dicta.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- ===== About Section End ===== -->
         </div>
         <!-- ===== Main Content End ===== -->
     </div>
