--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             <!-- ===== About Section End ===== -->
 
             <!-- ===== Services Section Start ===== -->
-            <section class="service section">
+            <section class="service section hidden">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -310,11 +310,83 @@
                                 </p>
                             </div>
                         </div>
-                        <!-- ===== Services Item End ===== -->
+            <!-- ===== Services Item End ===== -->
+                        
                     </div>-
                 </div>
             </section>
             <!-- ===== Services Section End ===== -->
+            <!-- ===== Portfolio Item Start ===== -->
+            <section class="portfolio section">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>Portfolio</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="portfolio-heading padd-15">
+                            <h2>My Last Project : </h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <!--- ===== Portfolio item Start ===== -->
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                <div class="portfolio-img">
+                                    <img src="assets/img/projeto/embreve.gif" alt="Imagem dos projetos">
+                                </div>
+                            </div>
+                        </div>
+                        <!--- ===== Portfolio item Start ===== -->
+                        <!--- ===== Portfolio item Start ===== -->
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                <div class="portfolio-img">
+                                    <img src="assets/img/projeto/embreve.gif" alt="Imagem dos projetos">
+                                </div>
+                            </div>
+                        </div>
+                        <!--- ===== Portfolio item Start ===== -->
+                        <!--- ===== Portfolio item Start ===== -->
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                <div class="portfolio-img">
+                                    <img src="assets/img/projeto/embreve.gif" alt="Imagem dos projetos">
+                                </div>
+                            </div>
+                        </div>
+                        <!--- ===== Portfolio item Start ===== -->
+                        <!--- ===== Portfolio item Start ===== -->
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                <div class="portfolio-img">
+                                    <img src="assets/img/projeto/embreve.gif" alt="Imagem dos projetos">
+                                </div>
+                            </div>
+                        </div>
+                        <!--- ===== Portfolio item Start ===== -->
+                        <!--- ===== Portfolio item Start ===== -->
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                <div class="portfolio-img">
+                                    <img src="assets/img/projeto/embreve.gif" alt="Imagem dos projetos">
+                                </div>
+                            </div>
+                        </div>
+                        <!--- ===== Portfolio item Start ===== --><!--- ===== Portfolio item Start ===== -->
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                <div class="portfolio-img">
+                                    <img src="assets/img/projeto/embreve.gif" alt="Imagem dos projetos">
+                                </div>
+                            </div>
+                        </div>
+                        <!--- ===== Portfolio item Start ===== -->
+                    </div>
+                </div>
+            </section>
+            <!-- ===== Portfolio Item End ===== -->
         </div>
         <!-- ===== Main Content End ===== -->
     </div>
