--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
 
         <!-- Arquivos CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/color-1.css">
+    <link rel="stylesheet" href="assets/css/responsive.css">
 
+    <!--- ====== Style Switcher ===== -->
+    <link rel="stylesheet" class="alternate-style" title="color-1" disabled href="assets/css/color-1.css">
+    <link rel="stylesheet" class="alternate-style" title="color-2"  disabled href="assets/css/color-2.css">
+    <link rel="stylesheet" class="alternate-style" title="color-3" disabled href="assets/css/color-3.css">
+    <link rel="stylesheet" class="alternate-style" title="color-4"  href="assets/css/color-4.css">
+    <link rel="stylesheet" class="alternate-style" title="color-5" disabled href="assets/css/color-5.css">
+    <link rel="stylesheet" href="assets/css/style-switcher.css">
 
         <!-- CDN export -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
@@ -37,10 +44,10 @@
         </div>
         <!-- ===== Aside End ===== -->
 
-        <!-- ===== Main Content Start ===== -->
+    <!-- ===== Main Content Start ===== -->
         <div class="main-content">
             <!-- ===== Home Section Start ===== -->
-            <section class="home section hidden">
+            <section class="home section ">
                 <div class="container">
                     <div class="row">
                         <div class="home-info padd-15">
@@ -59,7 +66,7 @@
             <!-- ===== Home Section End ===== -->
 
             <!-- ===== About Section Start ===== -->
-            <section class="about section hidden">
+            <section class="about section ">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -231,7 +238,7 @@
             <!-- ===== About Section End ===== -->
 
             <!-- ===== Services Section Start ===== -->
-            <section class="service section hidden">
+            <section class="service section ">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -316,8 +323,8 @@
                 </div>
             </section>
             <!-- ===== Services Section End ===== -->
-            <!-- ===== Portfolio Item Start ===== -->
-            <section class="portfolio section">
+            <!-- ===== Portfolio Section Start ===== -->
+            <section class="portfolio section ">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -386,16 +393,117 @@
                     </div>
                 </div>
             </section>
-            <!-- ===== Portfolio Item End ===== -->
+            <!-- ===== Portfolio Section End ===== -->
+            <!-- ===== Portfolio Section Start ===== -->
+            <section class="contact section">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>Contact Me</h2>
+                        </div>
+                    </div>
+                <h3 class="contact-title padd-15">Have You Any Question?</h3>
+                <h4 class="contact-sub-title padd-15">I´M AT YOUR SERVICES</h4>
+                <div class="row">
+                <!--- ===== Contact Info Item Start ===== -->
+                <div class="contact-info-item padd-15">
+                    <div class="icon"><i class="fa fa-phone"></i></div>
+                    <h4>Call Us On</h4>
+                    <p>+55 51 9 9999 9999</p>
+                </div>
+                <!--- ===== Contact Info Item End ===== -->
+                <!--- ===== Contact Info Item Start ===== -->
+                <div class="contact-info-item padd-15">
+                    <div class="icon"><i class="fa fa-map-marker"></i></div>
+                    <h4>Office</h4>
+                    <p>lalala@email.com</p>
+                </div>
+                <!--- ===== Contact Info Item End ===== -->
+                <!--- ===== Contact Info Item Start ===== -->
+                <div class="contact-info-item padd-15">
+                    <div class="icon"><i class="fa fa-envelope"></i></div>
+                    <h4>Email</h4>
+                    <p>Email@.com</p>
+                </div>
+                <!--- ===== Contact Info Item End ===== -->
+                <!--- ===== Contact Info Item Start ===== -->
+                <div class="contact-info-item padd-15">
+                    <div class="icon"><i class="fa fa-globe-americas"></i></div>
+                    <h4>Site</h4>
+                    <p>+55 51 9 9999 9999</p>
+                </div>
+                <!--- ===== Contact Info Item End ===== -->
+                </div>
+                <h3 class="contact-title padd-15">SEND ME EMAIL</h3>
+                <h4 class="contact-sub-title padd-15">I´M VERY RESPOSIVE EMAIL</h4>
+                <!--- ===== Contact Form Start ===== -->
+                <div class="row">
+                    <div class="contact-form padd-15">
+                        <div class="row">
+                            <div class="form-item col-6 padd-15">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" placeholder="Name">
+                                </div>
+                            </div>
+                            <div class="form-item col-6 padd-15">
+                                <div class="form-group">
+                                    <input type="email" class="form-control" placeholder="Email">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="form-item col-12 padd-15">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" placeholder="Subject">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="form-item col-12 padd-15">
+                                <div class="form-group">
+                                    <textarea name="" class="form-control" id="" placeholder="Message"></textarea>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="form-item col-12 padd-15">
+                                <button type="submit" class="btn">Send Email</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--- ===== Contact Form Start ===== -->
+                </div>
+            </section>
+            <!-- ===== Portfolio Section End ===== -->
         </div>
         <!-- ===== Main Content End ===== -->
     </div>
     <!-- ===== Main Container End ===== -->
+    <!-- ===== Style Switcher Start ===== -->
+    <div class="style-switcher">
+        <div class="style-switcher-toggler s-icon">
+            <i class="fas fa-cog fa-spin"></i>
+        </div>
+        <div class="day-night s-icon">
+            <i class="fas fa-moon"></i>
+        </div>
+        <h4>Theme Colors</h4>
+        <div class="colors">
+            <span class="color-1" onclick="setActiveStyle('color-1')"></span>
+            <span class="color-2" onclick="setActiveStyle('color-2')"></span>
+            <span class="color-3" onclick="setActiveStyle('color-3')"></span>
+            <span class="color-4" onclick="setActiveStyle('color-4')"></span>
+            <span class="color-5" onclick="setActiveStyle('color-5')"></span>
+        </div>
+    </div>
+    <!-- ===== Style Switcher End ===== -->
 
 
 
         <!-- Arquivo JS -->
     <script src="assets/js/script.js"></script>
     <script src="assets/js/dark_mode.js"></script>
+    <script src="assets/js/style-switcher.js"></script>
 </body>
 </html>
